# sovereign_risk_monitor

./: README.md
sovereign-risk-monitor/: LICENSE  README.md  pyproject.toml  requirements.txt
sovereign-risk-monitor/config/: countries.yaml  crisis_benchmarks.yaml  weights.yaml
sovereign-risk-monitor/examples/: quickstart.py
sovereign-risk-monitor/src/: __init__.py  monitor.py
sovereign-risk-monitor/src/analysis/: __init__.py  crisis_comparison.py
sovereign-risk-monitor/src/data/: __init__.py  fetchers.py
sovereign-risk-monitor/src/indicators/: __init__.py  early_warning.py  fiscal.py
sovereign-risk-monitor/src/scoring/: __init__.py  aggregator.py  normalizer.py
sovereign-risk-monitor/tests/: __init__.py
